--- a/src/locales/ru/translations.json
+++ b/src/locales/ru/translations.json
@@ -64,6 +64,41 @@
     ],
     "cta": "Отправить запрос"
   },
+  "extraServices": {
+    "title": "Другие услуги",
+    "text": "Также мы предоставляем услуги консалтинга в построении партнерских и посреднических отношений в области торговли, науки и других областях. У нас есть возможность проводить мониторинг событий в Украине по конкретному заданию партнера и реализовывать комплексные логистические решения",
+    "blocks": [
+      [
+        [
+          "Посредничество в отношениях с субъектами, заинтересованными в сотрудничестве в области торговли, науки, исследований, образования, технологического сотрудничества, а также в других областях",
+          "Поиск подходящих торговых и инвестиционных партнеров для субъектов, заинтересованных в Украине",
+          "Поиск бизнес-возможностей для организаций, планирующих вести деятельность в Украине",
+          "Мониторинг событий в Украине по конкретному заданию партнера с акцентом на конкретную область интересов партнера",
+          "Мониторинг возможных субъектов сотрудничества в Украине",
+          "Сопровождение правильного установления и развития отношений в сфере интересов партнера в Украине",
+          "Представление интересов Чешской Республики, европейских и неевропейских организаций в Украине"
+        ],
+        [
+          "Постоянное отслеживание событий в Украине, для консультации по соответствующим мерам в связи с развитием ситуации",
+          "Мониторинг в юридической, деловой, политической сферах, а также в сфере безопасности Украины",
+          "Консультирование и обеспечение связи между Чешской Республикой, европейскими и неевропейскими организациями и организациями в Украине",
+          "Юридические консультации и сопровождение при заключении договоров и контрактов с украинскими организациями",
+          "Консультации и предоставление партнеров в сфере логистики товаров, финансов и информации",
+          "Консультации и обеспечение хранения и транспортировки в Украине и зарубеж (наземным, морским и воздушным транспортом)",
+          "Консультации по конкретному назначению партнера на территории Украины"
+        ]
+      ],
+      [
+        [
+          "Комплексные логистические решения",
+          "Транспортные решения",
+          "Транспортно-логистический мониторинг",
+          "Обеспечение транспортно-логистической безопасности, оценка рисков, контроль транспортной безопасности"
+        ]
+      ]
+    ],
+    "blockNames": [["Партнерская программа", "Консалтинг"], ["Логистика"]]
+  },
   "results": {
     "title": "Факты, цифры, результаты",
     "year": {
