add(scroll): react-smooth-scrollbar added

--- a/src/locales/cze/translations.json
+++ b/src/locales/cze/translations.json
@@ -66,7 +66,7 @@
   },
   "extraServices": {
     "title": "Ostatní služby",
-    "text": "We provide consulting services in building partnerships and intermediaries in trade, science and other fields. We have ability to monitor services in Ukraine according to a specific assignment of a partner and implement complex logistics solutions",
+    "text": "Poskytujeme také poradenské služby při budování partnerství a zprostředkovatelských vztahů v oblasti obchodu, vědy a dalších oborů. Máme možnost sledovat dění na Ukrajině na základě konkrétního zadání od partnera a implementovat komplexní logistická řešení",
     "blocks": [
       [
         [
