feat(app): smooth scroll with locomotive-scroll

--- a/src/locales/en/translations.json
+++ b/src/locales/en/translations.json
@@ -19,7 +19,7 @@
     "text": "Powerful scientific and technical base of the enterprise allows us to solve problems of any complexity",
     "slides": [
       {
-        "title": "Energetics",
+        "title": "Energy",
         "text": "Our team has extensive experience in various energy sectors, which allows us to understand the current situation and development trends in the natural gas, oil and coal markets.",
         "url": "energy"
       },
